# dify-agent-tool

./: .env  manifest.yaml  provider.yaml  pyproject.toml
.github/workflows/: test.yml
tests/: tool_test.py
tools/: __init__.py  core.py  tool.yaml
